--- a/styles/global.scss
+++ b/styles/global.scss
@@ -209,6 +209,12 @@ img {
       font-weight: 300;
     }
   }
+  @media (max-width: 768px) {
+    .post-item {
+      width: 100%;
+      margin: 10px auto;
+    }
+  }
 }
 
 .home {
